# DG-LAB

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DG-Lab-Coyote-Game-Hub-Analysis.md  FIX_BLE_CONNECTION.md  GUI_TAURI_REACT_PLAN.md  IMPLEMENTATION_PLAN.md  PKGBUILD  PROJECT_COMPLETION_PLAN.md  PROJECT_PLAN.md  README.md  README_TEST.md  RELEASE_GUIDE.md  TEST_BASIC_FEATURES.md  TEST_GUIDE.md  WIFI_WEBSOCKET_README.md  requirements-test.txt  test-bridge-uv.bat  test-bridge.bat  test-bridge.py  test-bridge.sh  test-local-server.py
.github/workflows/: ci.yml  release.yml
apps/dglab-gui-tauri/: package-lock.json  package.json
apps/dglab-gui-tauri/src/: App.tsx  index.css
apps/dglab-gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/dglab-gui-tauri/src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
apps/dglab-gui-tauri/src-tauri/src/commands/: device.rs  mod.rs  power.rs  session.rs  wifi.rs
apps/dglab-gui-tauri/src/components/: WifiConnector.tsx
apps/dglab-gui-tauri/src/components/ui/: alert-dialog.tsx  dialog.tsx  select.tsx  tabs.tsx
apps/dglab-gui-tauri/src/hooks/: useDeviceEvents.ts
apps/dglab-gui-tauri/src/lib/: api.ts  errors.ts  toast.ts
apps/dglab-gui-tauri/src/pages/: Dashboard.tsx  DeviceScanner.tsx  PowerControl.tsx  PresetManager.tsx  WaveformGenerator.tsx
apps/dglab-gui-tauri/src/stores/: appStore.ts  deviceStore.ts  index.ts  presetStore.ts  waveformStore.ts
apps/dglab-gui-tauri/src/types/: common.ts  device.ts  events.ts  index.ts  preset.ts  session.ts  waveform.ts
crates/dglab-cli/: Cargo.toml
crates/dglab-cli/src/: error.rs  main.rs
crates/dglab-cli/src/commands/: bridge.rs  connect.rs  control.rs  mod.rs  preset.rs  scan.rs  script.rs  wifi.rs
crates/dglab-cli/src/tui/: app.rs  mod.rs  widgets.rs
crates/dglab-core/: Cargo.toml
crates/dglab-core/examples/: waveform_demo.rs
crates/dglab-core/src/: error.rs  lib.rs
crates/dglab-core/src/device/: bridge.rs  coyote.rs  mock.rs  mod.rs  traits.rs
crates/dglab-core/src/preset/: mod.rs  storage.rs
crates/dglab-core/src/script/: engine.rs  mod.rs
crates/dglab-core/src/session/: manager.rs  mod.rs
crates/dglab-core/src/waveform/: generator.rs  mod.rs
crates/dglab-gui/: Cargo.toml
crates/dglab-gui/src/: app.rs  main.rs
crates/dglab-gui/src/ui/: control_panel.rs  device_panel.rs  mod.rs  settings_panel.rs  waveform_editor.rs  wifi_panel.rs
crates/dglab-protocol/: Cargo.toml
crates/dglab-protocol/examples/: v3_protocol.rs
crates/dglab-protocol/src/: error.rs  lib.rs  v3.rs
crates/dglab-protocol/src/ble/: device.rs  mod.rs  scanner.rs
crates/dglab-protocol/src/packet/: decoder.rs  encoder.rs  mod.rs  types.rs
crates/dglab-protocol/src/wifi/: client.rs  error.rs  mod.rs  server.rs
docs/: ARCHITECTURE.md  ARCH_LINUX.md  INSTALLATION.md  RELEASE_CHECKLIST.md  USER_GUIDE.md
docs/protocol/: README.md  ble.md  packets.md  wifi.md
scripts/: README.md  clean-build.sh  clean-light.sh  clean.sh  install-hooks.sh  pre-commit
