[workspace]
members = [
    "crates/dglab-protocol",
    "crates/dglab-core",
    "crates/dglab-cli",
    # "crates/dglab-gui",  # Temporarily disabled - being replaced with Tauri + React
    "apps/dglab-gui-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["DG-LAB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/userzbb/DG-LAB"
homepage = "https://github.com/userzbb/DG-LAB"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# BLE
btleplug = "0.11"

# Network
tokio-rustls = "0.25"
rustls-native-certs = "0.7"
futures-util = "0.3"
websocket-codec = "0.5"
tokio-tungstenite = "0.21"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.25"
crossterm = "0.27"

# GUI
eframe = "0.24"
egui = "0.24"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
hex = "0.4"
tempfile = "3.10"

[workspace.lints.rust]
unused_crate_dependencies = "warn"
unused_qualifications = "warn"
unused_results = "warn"
