[package]
name = "dglab-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DG-LAB command line interface"

[dependencies]
dglab-protocol = { path = "../dglab-protocol" }
dglab-core = { path = "../dglab-core" }
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[[bin]]
name = "dglab"
path = "src/main.rs"
