[package]
name = "dglab-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DG-LAB GUI application"

[dependencies]
dglab-protocol = { path = "../dglab-protocol" }
dglab-core = { path = "../dglab-core" }
tokio.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "dglab-gui"
path = "src/main.rs"
